2008-06-14  Moritz  <moritz@gnu.org>

	* Makefile.am: Added mkerrors file to EXTRA_DIST.

2008-05-03  Moritz  <moritz@gnu.org>

	* assuan.h: Adjusted definitions for Poldi.