@@ -1,3 +1,7 @@
+2008-11-22  Moritz  <moritz@gnu.org>
+
+	* Makefile.am: Updated libassuan copy.
+
 2008-06-14  Moritz  <moritz@gnu.org>
 
 	* Makefile.am: Added mkerrors file to EXTRA_DIST.
